tests/error/poly_errors_py312/type_param_unknown_bound.py
from guppylang import guppy
from guppylang.std.lang import Copy


@guppy
def foo[T: (Copy, Bogus)](t: T) -> T:
    return t


@guppy
def main() -> None:
    foo(42)


main.compile()
