tests/error/poly_errors_py312/type_param_unknown_bound.err
Error: Variable not defined (at $FILE:6:18)
  | 
4 | 
5 | @guppy
6 | def foo[T: (Copy, Bogus)](t: T) -> T:
  |                   ^^^^^ `Bogus` is not defined

Guppy compilation failed due to 1 previous error
